@@ -1,3 +1,11 @@
+Changes since RTEMS-NFS 1.7:
+ - BUGFIX: must not attempt to release node if rtems_filesystem_evaluate_path()
+   fails in nfs_eval_link() since pathloc contains no valid node.
+   (Occasional crashes during libtecla filename completion might be caused
+   by this bug.)
+Changes since RTEMS-NFS 1.6:
+ - when using rtems-style installation path (w/o SSRL tweaks) headers
+   must be installed to '<bspdir>/lib/include', not '<bspdir>/include'.
 Changes since RTEMS-NFS 1.5:
  - BUGFIX: path lookup ('evalpath') would erroneously return 0 (success) if
            1. server had been alive in the past
